# yangi_trial

./: .clang-format  .gitignore  CMakeLists.txt  blacklist.txt  nomove.txt  util.cpp  util.h
data/2020/: errlist.txt  illegal_move.txt  no_end_time.txt  oute_sennnichite.txt  timeup.txt
script/: create_kifulist.py  train_policy.py
script/py-dlshogi/: train_policy.py
script/py-dlshogi/pydlshogi/: read_kifu.py
script/pydlshogi/: read_kifu.py
script/pydlshogi/pydlshogi/: features.py  read_kifu.py
test/: create_csa_list.cpp  create_feature.cpp  create_singleboard_feature.cpp  filter_rate_tesuu.py  read_csa.cpp  read_csa.h  train_single_board.py  train_single_board_cnn.py
